Fixing overflowing styling

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   }
   .submit-btn {
     transition: background-color 0.3s ease-in-out;
-    @apply mt-3 px-4 py-1 bg-black text-white cursor-pointer;
+    @apply px-4 py-1 bg-black text-white cursor-pointer;
   }
 
   .text-dim {
